# MicrohapsSel

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build-release.yml
SLURM/: run_data-prep.slurm  run_prediction.slurm
prediction-mh/: config_mh_mixture.R  config_mh_normal.R  main.R
prediction-mh/R/: cv_setup.R  data_preparation.R  evaluation.R  matrix_construction.R  visualization.R
prediction-mh/R/models/: bayesA.R  bayesR.R  gblup.R
prediction-snp/: config_snp_mixture.R  config_snp_mixture_mh.R  config_snp_normal.R  config_snp_normal_mh.R  config_snp_normal_rand.R  main.R
prediction-snp/R-snp/: models.R  visualization.R
prediction_mh/: config.R  main.R  note.md
prediction_mh/R/: data_preparation.R  evaluation.R  matrix_construction.R
prediction_mh/R/models/: bayesA.R  bayesR.R  gblup.R  xgboost_model.R
prediction_snp/: config.R
prediction_snp/R-snp/: data_prep.R  evaluation.R
preprocessing/: convert-from-vcf.py  convert-to-vcf.py  extract_selected_genotypes.py  get-hap-geno.py  haplotype_hybrid.py
preprocessing/.github/workflows/: build-release.yml
preprocessing/src/: lib.rs
preprocessing/src/modules/: blocks.rs  io.rs  ld.rs  output.rs  scoring.rs  types.rs
simulation/: simulationG2.R  simulation_reps.R
simulation/model_fitting/: main-mh-fit-eval.R  main-mh-fit.R  main-snp-fit-eval.R
simulation/pipeline/: G0_block_definition.sh  G0_create_map.sh  G1_block_definition.sh  G2_block_definition.sh
simulation/simulation_scenario/: simulationG1.R
src/modules/: ld.rs  mod.rs  output.rs  scoring.rs
(+14 files in other folders)
