[package]
name = "vcf-converter"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "convert-to-vcf"
path = "src/to_vcf.rs"

[[bin]]
name = "convert-from-vcf"
path = "src/from_vcf.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
rayon = "1.8"
anyhow = "1.0"
chrono = "0.4"
regex = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1